--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,7 +1,6 @@
 body {
     font-size: 20px;
     font-family: 'Noto Sans HK', sans-serif;
-    padding-bottom: 50px;
     color: #707070;
 }
 
@@ -16,7 +15,7 @@ h1 {
 }
 
 .title_bar {
-    background: linear-gradient(111deg,#ee9560,#f5d388, #f3976f);
+    background: linear-gradient(111deg,#ee9560,#f5d388, #e07a4d);
     background-size: 180% 180%;
     animation: gradient-animation 6s ease infinite;
     color: white;
@@ -60,7 +59,13 @@ h1 {
 }
 
 .skills_container, .interests_container, .project_container {
-    margin-top: 60px;
+    margin-top: 30px;
+}
+
+@media (min-width: 1200px) {
+    .skills_container, .interests_container, .project_container {
+        margin-top: 60px;
+    }
 }
 
 .title_font+hr {
@@ -80,7 +85,8 @@ h1 {
 }
 
 .project_box {
-    padding: 20PX 30PX;
+    padding: 20px 30px;
+    position: relative;
 }
 
 .project_img {
@@ -89,22 +95,48 @@ h1 {
     background-size: auto 100%;
     background-repeat: no-repeat;
     background-position: center;
-    border: #d7cdc6 5px solid;
+    /*border: #d7cdc6 5px solid;*/
     outline: 3px #d7cdc6 solid;
     outline-offset: 7px;
     transition: 0.5s ease-in-out;
 }
-.project_img:hover {
+.project_box:hover .project_img {
     background-size: auto 110%;
     outline: 2px #eba271 solid;
-    border: #eba271 5px solid;
+    /*border: #eba271 5px solid;*/
+    opacity: 80%;
+    background-color: black;
 }
 
 
-.project_title {
+.project_box:not(:hover) .project_title{
+    display: none;
+
+}
+.project_title div {
+    margin: auto;
+    padding: 10px 0;
+    background-color: rgba(235, 162, 113, 0.89);
+    width: 60%;
+}
+
+.project_box:hover .project_title{
     text-align: center;
-    margin-top: 20px;
+    position: absolute;
+    color: white;
+    width: 100%;
+    left: 0;
+    display: block;
+    transition: 1s;
+    animation: move-up 1s forwards ease-in-out;
 }
+
+
+@keyframes move-up {
+    0% {top: 80%; display: block}
+    100% {top: 45%; display: block}
+}
+
 
 .swiper {
     margin-top: 30px;
@@ -127,9 +159,8 @@ h1 {
     align-items: center;
     height: 500px;
     width: 20%;
-    transition: 0.3s;
-    background-color: #b3988a59;
-    background-blend-mode: hard-light
+    transition: 0.5s;
+    opacity: 0.9;
 }
 
 .swiper-slide:hover {
@@ -137,7 +168,8 @@ h1 {
     outline: solid 3px #eba271;
     outline-offset: -15px;
     color: #eba271;
-    text-shadow: 2px 2px 0 #4b2b14;
+    text-shadow: 3px 3px 3px #4b2b14, 2px 2px 10px #ffdbcb, -2px -2px 20px #ffeae0, 0px 0px 50px #ffffff;
+
 }
 
 .swiper-slide img {
@@ -145,5 +177,11 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+#footer {
+    background-color: #eba271;
+    color: white;
+    text-align: center;
 }
 
